[package]
name = "blurhash"
description = "A pure Rust implementation of blurhash"
documentation = "https://docs.rs/blurhash"
repository = "https://github.com/Raincal/blurhash-rs"
readme = "README.md"
keywords = [ "blurhash", "image" ]
license = "Apache-2.0/MIT"
version = "0.1.1"
authors = ["Raincal <cyj94228@gmail.com>"]
edition = "2018"

[dependencies]
fastapprox = "0.3.0"

[dev-dependencies]
image = "0.21.2"

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.test]
opt-level = 3
lto = "fat"
